Fix overflow of post-form

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,6 +27,7 @@
   background: white;
   -webkit-box-shadow: 10px 5px 5px rgb(192, 192, 192);
   box-shadow: 10px 5px 5px rgb(192, 192, 192);
+  width: 100%;
 }
 
 .post-form-container textarea {
